<resources>
    <string name="app_name">VoiceTally4</string>
    <string name="app_title">VoiceTally 4.0</string>

    <!-- Setup -->
    <string name="setup_title">Eenmalige setup</string>
    <string name="setup_subtitle">We vragen noodzakelijke permissies en kiezen je Documenten-map om de VoiceTally4-mappen aan te maken.</string>
    <string name="setup_button">Setup starten</string>
    <string name="setup_done">Setup voltooid!</string>
    <string name="setup_saf_cancelled">Geen map geselecteerd. Setup geannuleerd.</string>
    <string name="setup_error_title">Setup mislukt</string>
    <string name="setup_error_fallback">Er trad een fout op tijdens het aanmaken van mappen.</string>

    <!-- Permissions -->
    <string name="perm_denied_title">Permissies nodig</string>
    <string name="perm_denied_msg">Volgende permissies zijn geweigerd: %1$s</string>
    <string name="try_again">Opnieuw proberen</string>
    <string name="perm_denied_core">Nodige permissies (spraak/locatie) niet toegestaan.</string>
    <string name="perm_denied_notifications">Notificatie-toestemming geweigerd.</string>
    <string name="perm_notif_title">Notificaties toestaan?</string>
    <string name="perm_notif_rationale">We tonen optioneel meldingen (bijv. statusupdates van tellingen). Je kan dit ook later nog aanzetten in de systeeminstellingen.</string>
    <string name="perm_action_allow">Toestaan</string>

    <!-- Startscherm -->
    <string name="loading_species_msg">Soorten werden ingeladen…</string>
    <string name="start_telling">Start telling</string>
    <string name="tellingen">Tellingen</string>
    <string name="instellingen">Instellingen</string>
    <string name="aliassen">Aliassen</string>
    <string name="afsluiten">Afsluiten</string>
    <string name="species_count_loaded">%1$d soorten ingelezen</string>

    <!-- Soortselectie -->
    <string name="soortselectie_title">soortselectie</string>
    <string name="ok">OK</string>
    <string name="loading_failed_generic">Geen soorten gevonden!</string>
    <string name="loading_species">Soorten inladen</string>
    <string name="empty_alias_hint">Geen aliassen gevonden. Plaats aliasmapping.csv in /Documents/VoiceTally4/assets.</string>
    <string name="chosen_species_prefix">gekozen soorten : %1$s</string>
    <string name="chosen_species_none">gekozen soorten : (geen)</string>

    <!-- Metadata -->
    <string name="meta_title">basisgegevens</string>
    <string name="annuleer">Annuleer</string>
    <string name="verder">Verder</string>
    <string name="meta_waarnemer">waarnemer</string>
    <string name="meta_project">project</string>
    <string name="meta_locatie_type">locatie</string>
    <string name="meta_datum">datum</string>
    <string name="meta_tijd">tijd</string>
    <string name="meta_weer">weer</string>
    <string name="meta_methode">methode</string>
    <string name="meta_opmerkingen">opmerkingen</string>
    <string name="meta_kies_datum_title">Kies datum</string>
    <string name="meta_kies_tijd_title">Kies tijd</string>
    <string name="telling_started_id">Telling gestart - ID: %1$s</string>
    <string name="telling_started_generic">Telling gestart.</string>
    <string name="response_saved_at">Antwoord opgeslagen als: %1$s</string>
    <!-- Tallyscherm -->
    <string name="listening_status_listening">Luisteren…</string>
    <string name="dialog_add">Toevoegen</string>
    <string name="dialog_ignore">Negeer</string>
    <string name="tally_added_new_species">Toegevoegd: %1$d nieuwe soort(en)</string>


</resources>
